# Almuslim

./: Almuslim-Setup.iss  Almuslim.iss  LICENSE  README.md  config.sample.toml
App/Assets/logo/: README-ico.md  README.md  make-ico.ps1
Linux/: build.sh  build_gpp.sh  run.sh
Linux/packaging/: pack_appimage.sh  pack_tar.sh
MacOS/: build.sh  run.sh
MacOS/packaging/: pack_app.sh  pack_dmg.sh  pack_tar.sh
Terminal/Linux/: README.md  build.sh  build_gpp.sh  run.sh
Terminal/Linux/packaging/: pack_appimage.sh
Terminal/MacOS/: build.sh  run.sh
Terminal/MacOS/packaging/: pack_app.sh  pack_dmg.sh
Terminal/Windows/: InstallationLog.txt  build.ps1  installer.iss  make_installer.ps1  run.ps1
Terminal/cpp/: CMakeLists.txt
Terminal/cpp/build-mingw/: CMakeCache.txt  Makefile  cmake_install.cmake
Terminal/cpp/build-mingw/data/: cities.csv
Terminal/cpp/src/: hijri.cpp  hijri.hpp  main.cpp  platform.cpp  platform.hpp  ui.cpp  ui.hpp
Website/: 404.html  README.md  config.json  contact.html  downloads.html  index.html  installation.html  robots.txt  sitemap.xml  verify.html
Website/assets/: app.js  styles.css
Website/tools/: update-windows-download.ps1
Windows/: build.ps1  installer.iss  pack_tar.ps1  run.cmd  run.ps1
cpp/: CMakeLists.txt  Makefile
cpp/build-mingw/: Makefile
cpp/src/: main.cpp  ui.cpp  ui.hpp
